minor edit on image

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                             
                             </div>
                         </div>
-                    <div>
-                        <img src="files/Larry__Communication.svg" uk-svg>
+                    <div align="center" style="color: black;">
+                        <img src="files/Larry__Communication.svg" style="width: 50%;" uk-svg>
                     </div>
                 </div>
             </div>
