svg file fixed to show correctly on page

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             </div>
                         </div>
                     <div align="center" style="color: black;">
-                        <img src="files/Larry__Communication.svg" style="width: 50%;" uk-svg>
+                        <img src="files/Larry__Communication.svg" style="width: 85%;" uk-svg>
                     </div>
                 </div>
             </div>
@@ -109,8 +109,8 @@
                                 </p>
                             </div>
                         </div>
-                    <div>
-                        <img src="files/Larry__Log in.svg" uk-svg>
+                    <div align="center" style="color: black;">
+                        <img src="files/Larry__Log in.svg" style="width: 85%;" uk-svg>
                     </div>
                 </div>
             </div>
@@ -136,8 +136,8 @@
                                 </p>
                             </div>
                         </div>
-                    <div>
-                        <img src="files/Larry__Connection Lost.svg" uk-svg>
+                    <div align="center" style="color: black;">
+                        <img src="files/Larry__Connection Lost.svg" style="width: 85%;" uk-svg>
                     </div>
                 </div>
             </div>
